Fix company css in admin shift

--- a/src/app/main/content/schedule/shift/admin-shift/staff/selected/selected.component.scss
+++ b/src/app/main/content/schedule/shift/admin-shift/staff/selected/selected.component.scss
@@ -29,6 +29,10 @@
             top: 32px;
             border: 2px solid #fff;
         }
+
+        .company {
+            color: grey;
+        }
     }
 
     .person {
